--- a/public/default.css
+++ b/public/default.css
@@ -41,12 +41,8 @@ BODY {
     left: 0;
 }
 
-#buttons {
-    position: relative;
-}
-
 #result {
-    background-color: #9b9b9b;
+    background-color: skyblue; /* Hot Pink */
     width: 226px;
     height: 63px;
     margin: 0;
@@ -59,18 +55,13 @@ BODY {
     font-size: 25px;
     text-align: right;
 }
-
-/*BUTTON {
-    background-color: #d5d5d5;
-    border: 0;
-    border-radius: 0;
-    width: 55px;
-    height: 42px;
-    position: absolute;
-
-    font-size: 22px;
-}*/
-
+.btn {
+    font-size: 1em;
+    height: 45px;
+    border: 1px solid black;
+    background-color: skyblue; /* Deep Pink */
+    margin: 4px;
+}
 #sign,
 #clear {
     font-size: 17px;
@@ -92,53 +83,6 @@ BODY {
     display: inline-block;
     width: 25px;
     height: 45px;
-    background: url('digits.png') 0 0 no-repeat;
-    background-size: cover;
-    margin-top: 10px;
-    font: 0/0 Arial;
-    color: rgba(255, 255, 255, 0);
-    text-indent: -9999px;
-    z-index: 1;
-}
-
-.digit0 {
-    background-position: 0 0;
-}
-
-.digit1 {
-    background-position: -25px 0;
-}
-
-.digit2 {
-    background-position: -50px 0;
-}
-
-.digit3 {
-    background-position: -75px 0;
-}
-
-.digit4 {
-    background-position: -100px 0;
-}
-
-.digit5 {
-    background-position: -125px 0;
-}
-
-.digit6 {
-    background-position: -150px 0;
-}
-
-.digit7 {
-    background-position: -175px 0;
-}
-
-.digit8 {
-    background-position: -200px 0;
-}
-
-.digit9 {
-    background-position: -225px 0;
 }
 
 .resultchar.decimal {
@@ -175,12 +119,4 @@ BODY {
 
 .calculator {
     max-width: 320px;
-}
-
-.btn {
-    font-size: 1em;
-    height: 45px;
-    border: 1px solid black;
-    background-color: #d5d5d5;
-    margin: 4px;
 }
